--- a/frontend/mobile/react-native/expo-go/expo-go-1/package.json
+++ b/frontend/mobile/react-native/expo-go/expo-go-1/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
     "axios": "^1.2.1",
     "expo": "~47.0.8",
+    "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
+    "jwt-decode": "^3.1.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
